--- a/bower.json
+++ b/bower.json
@@ -10,6 +10,7 @@
     "angular-sb-highlight-group": "0.2.0"
   },
   "devDependencies": {
-    "angular-mocks": "~1.2.0"
+    "angular-mocks": "~1.2.0",
+    "es5-shim": "~2.3.0"
   }
 }
